	no group leader but this was changed to pointing to its own
	window.  This resulted however in many places checking for both
	conditions, and several checking only for 0 which could not
	occur anymore. Changed it back to 0 (so we can now distinguish
	again windows that really indicate themselves as group leader,
	if we wish) and this gave rise to some simplifications.

	Also, there were various loops through all TwmWindows looking
	for a group leader (or a transientfor), I replaced them with
	GetTwmWindow() which uses the Xlib function XFindContext() which
	uses a hash table lookup. This should be more efficient.

	When you change the occupation of a group member window, it is
	now applied to the group leader (which in turn affects all
	members).

	I tried this with ExMH, the only program that uses a real group
	leader that I could find. Iconifying the leader unmaps the
	members. What should "squeezing" do? ExMH also has an icon
	window (see ICCCM 4.1.9, 3rd option) which behaves weirdly; this
	may be a bug in ExMH (see exmh-2.7.2/exmh.BUGS) even though fvwm
	somehow handles it better.
	[Olaf "Rhialto" Seibert]

   18 - When Squeezing a window group leader, unmap the member windows,
	just like happens with iconification.
	[Olaf "Rhialto" Seibert]

   19 - Simplifications c.q. de-duplications of code regarding the
	WorkSpaceManager and Occupation windows. This includes coding
	the layout of these windows only once instead of twice (at
	initialisation and when resizing). If it's wrong now at least it
	should be consistent.
	When changing occupation via functions like
	f.movetonextworkspace, also move complete window groups (just
	like when you do it via the Occupation window).
	Also fixed changing the occupation of the Occupation window.
	Documented (so far) undocumented possibility to edit the labels
	of workspaces on the fly (what use this is, I'm not sure).
	Removed some unused variables.
	[Olaf "Rhialto" Seibert]