@@ -118,27 +118,7 @@ SOUNDSRC        =
 SOUNDOBJ        = 
 .ENDIF
 
-.IFDEF USE_SESSION
-SESSIONLIBDIR   = $(USER_SESSIONLIBDIR)
-SESSIONINCDIR   = ,$(USER_SESSIONINCDIR)
-
-SESSIONDEFINES  = ,X11R6
-SESSIONLIB      = $(SESSIONLIBDIR)DECW$SMSHR
-SESSIONSRC      = SESSION.C
-SESSIONOBJ      = ,$(GOAL)SESSION.$(EXT)OBJ
-.ELSE
-SESSIONDEFINES  = 
-SESSIONSRC      = 
-SESSIONOBJ      = 
-.ENDIF
-
-.IFDEF I18N
-I18NDEFINES    = ,I18N
-.ELSE
-I18NDEFINES    =
-.ENDIF
-
-MORE_CFLAGS    = /DEBUG/DEFINE=(VMS$(M4DEFINES)$(GNOMEDEFINES)$(IMCONVDEFINES)$(XPMDEFINES)$(JPEGDEFINES)$(SESSIONDEFINES)$(SOUNDDEFINES)$(I18NDEFINES),FUNCPROTO=14,C_ALLOCA,""emacs"",BLOCK_INPUT,EXIT_ENDSESSION=$(EXIT_ENDSESSION)''extra_defs')''extra_includes'
+MORE_CFLAGS    = /DEBUG/DEFINE=(VMS$(M4DEFINES)$(GNOMEDEFINES)$(IMCONVDEFINES)$(XPMDEFINES)$(JPEGDEFINES)$(SOUNDDEFINES),FUNCPROTO=14,C_ALLOCA,""emacs"",BLOCK_INPUT,EXIT_ENDSESSION=$(EXIT_ENDSESSION)''extra_defs')''extra_includes'
 EXTRA_INCLUDES = $(M4INCDIR)$(IMCONVINCDIR)$(XPMINCDIR)$(JPEGINCDIR)$(SOUNDINCDIR)
 
 LD = link
@@ -166,6 +146,8 @@ all : setup
 	GOAL="$(GOAL)"
 	X11XMU="$(X11XMU)"
 	X11XMULIB="$(X11XMULIB)"
+	X11SM="$(X11SM)"
+	X11SMLIB="$(X11SMLIB)"
 	XPMINCDIR="$(XPMINCDIR)"
 	XPMLIBDIR="$(XPMLIBDIR)"
 	XPMDEFINES="$(XPMDEFINES)"
@@ -191,13 +173,6 @@ all : setup
 	SOUNDLIB="$(SOUNDLIB)"
 	SOUNDSRC="$(SOUNDSRC)"
 	SOUNDOBJ="$(SOUNDOBJ)"
-	SESSIONINCDIR="$(SESSIONINCDIR)"
-	SESSIONLIBDIR="$(SESSIONLIBDIR)"
-	SESSIONDEFINES="$(SESSIONDEFINES)"
-	SESSIONLIB="$(SESSIONLIB)"
-	SESSIONSRC="$(SESSIONSRC)"
-	SESSIONOBJ="$(SESSIONOBJ)"
-	I18NDEFINES="$(I18NDEFINES)"
 	$(MMS) $(MMSQUALIFIERS) /OVERRIDE /DESCRIPTION=DESCRIP.SUBMMS -
 		/MACRO=(EXT="''ext'",EXE_EXT="''exe_ext'"'do_option''dep_xwdfile')
 
