@@ -9,15 +9,14 @@ OBJS =	$(GOAL)GRAM.$(EXT)OBJ,$(GOAL)LEX.$(EXT)OBJ,$(GOAL)DEFTWMRC.$(EXT)OBJ,-
 	$(GOAL)VERSION.$(EXT)OBJ,$(GOAL)ICONMGR.$(EXT)OBJ,-
 	$(GOAL)CURSOR.$(EXT)OBJ,$(GOAL)ICONS.$(EXT)OBJ,-
 	$(GOAL)WORKMGR.$(EXT)OBJ,$(GOAL)WINDOWBOX.$(EXT)OBJ,-
-	$(GOAL)CLICKTOFOCUS.$(EXT)OBJ,$(GOAL)VSCREEN.$(EXT)OBJ-
-	$(GNOMEOBJ)$(SESSIONOBJ)$(SOUNDOBJ),-
+	$(GOAL)CLICKTOFOCUS.$(EXT)OBJ,$(GOAL)VSCREEN.$(EXT)OBJ,-
+	$(GOAL)SESSION.$(EXT)OBJ$(GNOMEOBJ)$(SOUNDOBJ),-
 	$(GOAL)VMS_CMD_SERVICES.$(EXT)OBJ,-
 	$(GOAL)LNM.$(EXT)OBJ,$(GOAL)ALLOCA.$(EXT)OBJ
 
 .FIRST :
 	DEFINE X11XMU $(X11XMU)
-	sessionincdir="$(SESSIONINCDIR)" - ","
-	IF sessionincdir .NES. "" THEN DEFINE X11SM 'sessionincdir'
+	DEFINE X11SM $(X11SM)
 
 .SUFFIXES : .$(EXT)OBJ .C
 
@@ -74,11 +73,11 @@ $(OPTION) : DESCRIP.MMS DESCRIP.SUBMMS
 	open/write foo $(OPTION)
 	write foo __result,"/LIB"
 	write foo "$(X11XMULIB)"
+	write foo "$(X11SMLIB)/SHARE"
 	write foo "SYS$SHARE:DECW$XTSHR/SHARE"
 	write foo "SYS$SHARE:DECW$XEXTLIBSHR/SHARE"
 	write foo "SYS$SHARE:DECW$XLIBSHR/SHARE"
 	write foo "SYS$SHARE:DECW$ICELIB/SHARE"
-	if "$(SESSIONLIB)" .nes. "" then write foo "$(SESSIONLIB)/SHARE"
 	close foo
 
 xwdfile.h : descrip.mms
